<resources>
    <string name="app_name">MyAgriapp</string>
    <string name="title_activity_login">Device ID</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Title">App-based Agricultural Parameters Monitoring System</string>
    <string name="loginbutton">Login</string>
    <string name="Button1">Login</string>
    <string name="passwd">Password</string>
    <string name="mainheading">DST-SERB Project On</string>
    <string name="ParentInst">Parent Institute</string>
    <string name="parentinstname">Sri Ramakrishna Engineering College  \n Coimbatore - 641 022</string>
    <string name="HostInst">Host Institute</string>
    <string name="hostinstname">ICAR - Sugarcane Breeding Institute \n Coimbatore - 641 007</string>
    <string name="Parentname">Principal Investigator</string>
    <string name="Prininvest">Dr. R. Madhumathi AP/CSE  &#10; SREC</string>
    <string name="Hostname">Project Mentor</string>
    <string name="Projmentor">Dr. T. Arumuganathan  Principal Scientist \n ICAR - Sugarcane Breeding Institute</string>
    <string name="personal_information">Personal Information</string>
    <string name="namereg">Name</string>
    <string name="statereg">State</string>
    <string name="districtreg">District</string>
    <string name="address">Address</string>
    <string name="villagereg">Village</string>
    <string name="phonenoreg">Phone Number</string>
    <string name="emailreg">Email (Optional)</string>
    <string name="register">REGISTER</string>
    <string name="userid">User ID</string>
    <string name="frgtpass">Forgot Password</string>
    <string name="nameapp">Farm Connect</string>
    <string name="monitor">Real-time Monitoring of Agricutural parameters</string>
    <string name="Welcome">Welcome to Farm Connect. A unique application to connect farmers and fields </string>
    <string name="Newuser">Create New Account</string>
    <string name="Forgotpwd">Forgot Password</string>
    <string name="Registration">Registration</string>
    <string name="Crop">Crop Cultivated</string>
    <string name="yerd">Yerd Period</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="moisture">Soil Moisture</string>
    <string name="nitrogen">Soil Nitrogen</string>
    <string name="phosphorous">Soil Phosphorous</string>
    <string name="potassium">Soil Potassium</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="dashboardpict">Get Your Field Information Here!</string>
    <string name="fauser">&#xf007;</string>
    <string name="show">Show</string>
    <string name="nitro">Soil Nitrogen</string>
    <string name="RangeNitro">Nitrogen Range</string>
    <string name="textnitro9">Nitrogen helps foliage grow strong. It also gives plants their green color due to its assistance with chlorophyll production. Nitrogen plays a key role in photosynthesis and protein production. Too little nitrogen can limit plant productivity.</string>
    <string name="sixteenthtext">Potassium strengthens plants, helps contribute to early growth and assists the plants in retaining water. It also keeps the plants from contracting diseases and insects. Plants rely on potassium for translocation of sugars.</string>
    <string name="firsttext">Phosphorous assists the growth of roots and helps plants survive harsh climates and environmental stressors. Phosphorus is a primary component of cell membranes and enzymes of plants and also plays a crucial role in photosynthesis.</string>
    <string name="K">Potassium</string>
    <string name="twelthtext">Potassium Range</string>
    <string name="potash">Soil Potassium</string>
    <string name="Phospho">Soil Phosphorous</string>
    <string name="eleventhtext">Phosphorous Range</string>
    <string name="seventeenthtext">Soil moisture is a key variable in controlling the exchange of water and heat energy between the land surface and the atmosphere through evaporation and plant transpiration. As a result, soil moisture plays an important role in the development of weather patterns and the production of precipitation.</string>
</resources>
