<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".potassium">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/potash"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textColor="@color/Green"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <!-- <TextView
         android:id="@+id/textpotres"
         style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView4" />-->

    <TextView
        android:id="@+id/textpotres"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"/>


    <TextView
        android:id="@+id/twelthtext"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textpotres"
        android:layout_marginTop="8dp"
        android:text="@string/twelthtext"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


    <TextView
        android:id="@+id/secondtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/twelthtext"
        android:layout_marginStart="10dp"
        android:text="Low\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020      Less than 110 kg/ha"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <!--
        <TextView
            android:id="@+id/fifthtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/secondtext"
            android:layout_marginStart="10dp"
            android:text="@string/thirteentext"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    -->
    <TextView
        android:id="@+id/thirdtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondtext"
        android:layout_marginStart="10dp"
        android:text="Medium\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020110-280kg/ha"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <!--
        <TextView
            android:id="@+id/sixthtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thirdtext"
            android:layout_marginStart="10dp"
            android:text="@string/fourteenthtext"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    -->
    <TextView
        android:id="@+id/fourthtext"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thirdtext"
        android:layout_marginStart="10dp"
        android:text="High \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020       Greater than 280 kg/ha"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <!--
        <TextView
            android:id="@+id/seventhtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fourthtext"
            android:layout_marginStart="10dp"
            android:text="@string/fifteenthtext"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    -->
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/fourthtext"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/K"
        app:srcCompat="@drawable/potashi" />

    <TextView
        android:id="@+id/sixteenthtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView4"
        android:justificationMode="inter_word"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/sixteenthtext"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


</RelativeLayout>